--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -24,6 +24,12 @@ a {
         word-wrap: break-word;
         position: relative;
         text-align: left;
+        @media all and (min-width: 769px) and (max-width: 959px) {
+            width: calc(100%/3);
+        }
+        @media all and (max-width: 768px) {
+            width: 50%;
+        }
         .video_box_img {
             width: 90%;
             padding-bottom: 67.5%;
